[gd_scene load_steps=8 format=2]

[ext_resource path="res://Ecran-titre.gd" type="Script" id=1]
[ext_resource path="res://assets/ecrantitrevide.jpg" type="Texture" id=2]
[ext_resource path="res://assets/noot.png" type="Texture" id=3]
[ext_resource path="res://assets/start.png" type="Texture" id=4]
[ext_resource path="res://assets/light.png" type="Texture" id=5]
[ext_resource path="res://assets/start_hover.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Intro"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Noot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Noot2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Start:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Ecran-titre" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="."]
margin_left = 382.0
margin_top = 453.0
margin_right = 525.0
margin_bottom = 528.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishLight" type="Light2D" parent="Start"]
position = Vector2( 71, 37 )
enabled = false
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = SubResource( 1 )

[node name="Noot" type="TextureRect" parent="."]
visible = false
margin_left = 502.938
margin_top = 212.37
margin_right = 550.938
margin_bottom = 252.37
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Noot2" type="TextureRect" parent="."]
visible = false
margin_left = 570.744
margin_top = 208.132
margin_right = 618.744
margin_bottom = 248.132
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.698039, 0.690196, 0.784314, 1 )

[node name="Lights" type="Node2D" parent="."]

[node name="Moon" type="Light2D" parent="Lights"]
position = Vector2( 837, 148 )
texture = ExtResource( 5 )
color = Color( 0.52549, 0.52549, 0.52549, 1 )
energy = 0.8

[node name="TorchLight" type="Light2D" parent="Lights"]
position = Vector2( 643.584, 25.0703 )
scale = Vector2( 0.3, 1.5 )
texture = ExtResource( 5 )
texture_scale = 0.8
color = Color( 0.968627, 1, 0.00392157, 1 )

[node name="TorchLight2" type="Light2D" parent="Lights"]
position = Vector2( 330.135, 39.6861 )
rotation = -0.523599
scale = Vector2( 0.4, 2 )
texture = ExtResource( 5 )
texture_scale = 0.6
color = Color( 0.968627, 1, 0.00392157, 1 )

[node name="TorchLight3" type="Light2D" parent="Lights"]
position = Vector2( 960.515, 334.217 )
rotation = 0.785398
scale = Vector2( 0.4, 2 )
texture = ExtResource( 5 )
texture_scale = 0.6
color = Color( 0.968627, 1, 0.00392157, 1 )
energy = 0.5
[connection signal="mouse_entered" from="Start" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="." method="_on_Start_mouse_exited"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
